# keyboardtest1

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  PRODUCT_PLAN.md  README.md  build.gradle  gradlew  mimocode.json  rebuild_dict.py  settings.gradle
.github/workflows/: build-ai-engine.yml  build-apk.yml  build-librime.yml  build.yml
ai-engine/: build.gradle.kts
ai-engine/src/main/cpp/: CMakeLists.txt  llama-jni.cpp  mnn-llm.cpp  vulkan_compat.hpp  vulkan_hpp_compat.h  vulkan_ndk_compat.h  vulkan_ndk_compat_post.h  vulkan_ndk_compat_pre.h  whisper-jni.cpp
ai-engine/src/main/java/com/cesia/input/engine/ai/: MNNEngine.kt  SherpaOnnxEngine.kt  SherpaTtsEngine.kt  WhisperEngine.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: pinyin_dict.json  pinyin_phrases.json  qwen35-2b-mnn-config.json
app/src/main/assets/qwen35-2b-mnn/: config.json
app/src/main/assets/rime/: default.yaml  pinyin.schema.yaml  t9_pinyin.dict.yaml  t9_pinyin.prism.yaml  t9_pinyin.schema.yaml
app/src/main/java/com/cesia/input/: CandidateAdapter.kt  CesiaInputMethod.kt  CesiaKeyboardView.kt  HistoryActivity.kt  NewsSourceModel.kt  PersonalizationActivity.kt  ScreenReaderService.kt  SettingsActivity.kt
app/src/main/java/com/cesia/input/ai/: AIEngine.kt  LocalModeManager.kt  LocalModeToggleHelper.kt  VoiceAISettingsHelper.kt
app/src/main/java/com/cesia/input/engine/: PinyinDictManager.kt  PinyinEngine.kt  TypelessEngine.kt
app/src/main/java/com/cesia/input/instruction/: InstructionSet.kt
app/src/main/java/com/cesia/input/model/: ModelDownloadManager.kt  ModelInfo.kt  ModelManager.kt
app/src/main/java/com/cesia/input/polish/: PolishService.kt
app/src/main/java/com/cesia/input/recognizer/: FallbackRecognizer.kt
app/src/main/java/com/cesia/input/stats/: GrammarGuideManager.kt  MagicHistoryManager.kt  PolishStatsManager.kt
app/src/main/java/com/cesia/input/ui/: CustomKeyboardView.kt
app/src/main/java/com/cesia/input/voice/: SimulTranslateManager.kt  VoiceEngine.kt  VoiceRecorder.kt
app/src/main/java/com/cesia/input/wakeword/: WakeWordDetector.kt
app/src/main/java/com/cesia/input/wenet/: WenetManager.kt
app/src/main/jni/librime_jni/: rime_jni.cc
app/src/main/res/drawable/: button_background.xml  ic_edit.xml  ic_mic.xml  ic_star_five.xml  ic_star_four.xml  key_background.xml  mic_button_bg.xml  mic_button_bg_record.xml  voice_wave_anim.xml  wave_1.xml  wave_2.xml  wave_3.xml
app/src/main/res/layout/: dialog_ai_style_picker.xml  dialog_fetch_confirm.xml  dialog_news_sources.xml  dialog_voice_polish_selector.xml  fragment_appearance.xml  fragment_command_words.xml  input_view.xml  item_ai_style.xml  item_clipboard_grid.xml  item_history_record.xml  item_magic_grid.xml  key_preview.xml  popup_clipboard_manager.xml  popup_magic_menu.xml  popup_smart_writing.xml  settings.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: method.xml  number.xml  qwerty.xml  screen_reader_config.xml  symbols.xml  symbols_cn.xml  symbols_en.xml  t9.xml
patches/: ggml-vulkan-adreno.patch  ggml-vulkan-android-cmake.patch  ggml-vulkan-android-shaders.patch  ggml-vulkan-android.patch
rime-engine/: build.gradle.kts
rime-engine/src/main/assets/rime/: pinyin.schema.yaml
rime-engine/src/main/java/com/cesia/input/engine/rime/: RimeEngine.kt  RimeEngineFallback.kt  RimeJni.kt
rime-engine/src/main/java/com/osfans/trime/core/: Rime.kt  RimeProto.kt  Structs.kt
